--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -155,7 +155,7 @@ html {
 .mat-icon {
   /* guide: https://developers.google.com/fonts/docs/material_icons */
   /* names: https://github.com/google/material-design-icons/blob/master/variablefont/MaterialSymbolsOutlined%5BFILL%2CGRAD%2Copsz%2Cwght%5D.codepoints  */
-  margin-left: 8px;
+  margin-left: 4px;
   font-family: "Material Icons";
   font-weight: normal;
   font-style: normal;
@@ -175,7 +175,7 @@ html {
   font-feature-settings: "liga"; /* Support for IE. */
   cursor: pointer;
   user-select: none;
-  margin-right: 8px;
+  margin-right: 4px;
 }
 
 .mat-icon:hover {
